add class properties babel plugin to package.json and .babelrc; update index.html template/rename it to index_template.html

--- a/src/index_template.html
+++ b/src/index_template.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Project Phase</title>
+    <title>Web App Template</title>
     <meta name="description" content="Web App Template" />
     <meta name="author" content="Thomsen Cummings" />
 
